<resources>
    <string name="app_name">Home</string>
    <string name="title_activity_Choose_Course">Select A Course</string>
    <string name="title_activity_home">Home</string>

    <!--Home Screen-->
    <string name="play_button">Play</string>
    <string name="my_games_button">Stats</string>
    <string name="my_discs_button">Options</string>

    <!--Choose Course-->
    <string name="choose_course_search_hint">Course Search</string>
    <string name="choose_course_play_button">Select</string>

    <!--Number Players-->
    <string name="number_players_subtract_player_button">&lt;</string>
    <string name="number_players_add_player_button">&gt;</string>
    <string name="number_players_title">Select Players</string>
    <string name="number_players_play_button">Play!</string>

    <!--Play_game-->
    <string name="play_game_course_avg">Course Avg:</string>
    <string name="play_game_course_best">Course Best:</string>
    <string name="play_game_hole_avg">Tee Avg:</string>
    <string name="play_game_hole_best">Tee Best:</string>

    <!--TestActivity-->
    <string name="test_activity_test_button">Run Tests</string>
    <string name="test_activity_test_button_testing">Testing</string>
    <string name="test_activity_reset_stock_button">Reset Stock Database</string>

    <!--Statistics-->
    <string name="statistics_game_button">Games</string>
    <string name="statistics_course_button">Courses</string>
    <string name="statistics_player_button">Players</string>

    <!-- New Course Activity -->
    <string name="new_course_course_name_text">Course Name</string>
    <string name="new_course_course_hole_text">Hole Information</string>
    <string name="new_course_hole_item_text">Hole </string>


</resources>
