<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="chris.discgolf.HomeScreen"
    android:weightSum="10"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:padding="15dp"
        android:weightSum="9"
        >

        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingRight="100dp"
            android:text="@string/play_button"
            android:gravity ="center"
            android:drawableLeft="@drawable/catcher_small"
            style="@style/test_button"
            />

        <Button
            android:id="@+id/my_games_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/my_games_button"
            android:gravity = "center"
            style="@style/test_button"
            android:paddingRight="90dp"
            android:drawableLeft="@drawable/stats_small" />

        <Button
            android:id="@+id/home_settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/my_discs_button"
            android:gravity="center"
            style="@style/test_button"
            android:paddingRight="35dp"
            android:drawableLeft="@drawable/cogwheel"/>

    </LinearLayout>

</LinearLayout>
